--- a/Main/SEToolbox/SEToolbox/Views/WindowComponentList.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowComponentList.xaml
@@ -37,51 +37,52 @@
                         </Grid.RowDefinitions>
                         <controls:SortableListView ItemsSource="{Binding CubeAssets}" SelectedValue="{Binding SelectedCubeAsset}"
                             ColumnHeaderArrowUpTemplate="{StaticResource HeaderTemplateArrowUp}" ColumnHeaderArrowDownTemplate="{StaticResource HeaderTemplateArrowDown}">
-                        <ListView.View>
-                            <GridView>
-                                <GridViewColumn Width="44">
-                                    <GridViewColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <Image Width="32" Height="32" Source="{Binding Path=TextureFile, Converter={StaticResource DDSConverter}, ConverterParameter='32,32'}" SnapsToDevicePixels="True" />
-                                        </DataTemplate>
-                                    </GridViewColumn.CellTemplate>
-                                </GridViewColumn>
-                                <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}"/>
-                                <GridViewColumn Header="Type Id" DisplayMemberBinding="{Binding TypeId}"/>
-                                <GridViewColumn Header="Sub Type Id" DisplayMemberBinding="{Binding SubtypeId}"/>
-                                <GridViewColumn Header="Cube Size" DisplayMemberBinding="{Binding CubeSize}" Width="85"/>
-                                <controls:SortableGridViewColumn Header="Accessible" Width="80" DisplayMemberBinding="{Binding Accessible, Converter={StaticResource EnumToResouceConverter}}" />
-                                <controls:SortableGridViewColumn Header="Size (W×H×D)" Width="80">
-                                    <GridViewColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <TextBlock>
-                                                <TextBlock.Text>
-                                                    <MultiBinding StringFormat="{}{0}×{1}×{2}">
-                                                        <Binding Path="Size.Width" />
-                                                        <Binding Path="Size.Height" />
-                                                        <Binding Path="Size.Depth" />
-                                                    </MultiBinding>
-                                                </TextBlock.Text>
-                                            </TextBlock>
-                                        </DataTemplate>
-                                    </GridViewColumn.CellTemplate>
-                                </controls:SortableGridViewColumn>
-                                <controls:SortableGridViewColumn Header="Mass (Kg)" Width="100" SortBinding="{Binding Mass}">
-                                    <GridViewColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <TextBlock TextAlignment="Right" Text="{Binding Path=Mass, StringFormat='{}{0:#,##0.00}'}" />
-                                        </DataTemplate>
-                                    </GridViewColumn.CellTemplate>
-                                </controls:SortableGridViewColumn>
-                                <controls:SortableGridViewColumn Header="Build Time" Width="90" SortBinding="{Binding Time}">
-                                    <GridViewColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <TextBlock TextAlignment="Right" Text="{Binding Path=Time, StringFormat='{}{0:hh\\:mm\\:ss\\.ff}'}" />
-                                        </DataTemplate>
-                                    </GridViewColumn.CellTemplate>
-                                </controls:SortableGridViewColumn>
-                            </GridView>
-                        </ListView.View>
+                            <ListView.View>
+                                <GridView>
+                                    <GridViewColumn Width="44">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <Image Width="32" Height="32" Source="{Binding Path=TextureFile, Converter={StaticResource DDSConverter}, ConverterParameter='32,32'}" SnapsToDevicePixels="True" />
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                    <GridViewColumn Header="Name" DisplayMemberBinding="{Binding FriendlyName}"/>
+                                    <!--<GridViewColumn Header="Internal Name" DisplayMemberBinding="{Binding Name}"/>-->
+                                    <GridViewColumn Header="Type Id" DisplayMemberBinding="{Binding TypeId}"/>
+                                    <GridViewColumn Header="Sub Type Id" DisplayMemberBinding="{Binding SubtypeId}"/>
+                                    <GridViewColumn Header="Cube Size" DisplayMemberBinding="{Binding CubeSize}" Width="85"/>
+                                    <controls:SortableGridViewColumn Header="Accessible" Width="80" DisplayMemberBinding="{Binding Accessible, Converter={StaticResource EnumToResouceConverter}}" />
+                                    <controls:SortableGridViewColumn Header="Size (W×H×D)" Width="80">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <TextBlock>
+                                                    <TextBlock.Text>
+                                                        <MultiBinding StringFormat="{}{0}×{1}×{2}">
+                                                            <Binding Path="Size.Width" />
+                                                            <Binding Path="Size.Height" />
+                                                            <Binding Path="Size.Depth" />
+                                                        </MultiBinding>
+                                                    </TextBlock.Text>
+                                                </TextBlock>
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </controls:SortableGridViewColumn>
+                                    <controls:SortableGridViewColumn Header="Mass (Kg)" Width="100" SortBinding="{Binding Mass}">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <TextBlock TextAlignment="Right" Text="{Binding Path=Mass, StringFormat='{}{0:#,##0.00}'}" />
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </controls:SortableGridViewColumn>
+                                    <controls:SortableGridViewColumn Header="Build Time" Width="90" SortBinding="{Binding Time}">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <TextBlock TextAlignment="Right" Text="{Binding Path=Time, StringFormat='{}{0:hh\\:mm\\:ss\\.ff}'}" />
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </controls:SortableGridViewColumn>
+                                </GridView>
+                            </ListView.View>
                         </controls:SortableListView>
                         <Grid Grid.Row="1" Margin="4">
                             <Grid.ColumnDefinitions>
@@ -114,7 +115,8 @@
                                         </DataTemplate>
                                     </GridViewColumn.CellTemplate>
                                 </GridViewColumn>
-                                <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}"/>
+                                <GridViewColumn Header="Name" DisplayMemberBinding="{Binding FriendlyName}"/>
+                                <!--<GridViewColumn Header="Internal Name" DisplayMemberBinding="{Binding Name}"/>-->
                                 <GridViewColumn Header="Type Id" DisplayMemberBinding="{Binding TypeId}"/>
                                 <GridViewColumn Header="Sub Type Id" DisplayMemberBinding="{Binding SubtypeId}"/>
                                 <controls:SortableGridViewColumn Header="Accessible" Width="80" DisplayMemberBinding="{Binding Accessible, Converter={StaticResource EnumToResouceConverter}}" />
@@ -155,7 +157,8 @@
                                         </DataTemplate>
                                     </GridViewColumn.CellTemplate>
                                 </GridViewColumn>
-                                <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}"/>
+                                <GridViewColumn Header="Name" DisplayMemberBinding="{Binding FriendlyName}"/>
+                                <!--<GridViewColumn Header="Internal Name" DisplayMemberBinding="{Binding Name}"/>-->
                                 <GridViewColumn Header="Type Id" DisplayMemberBinding="{Binding TypeId}"/>
                                 <GridViewColumn Header="Sub Type Id" DisplayMemberBinding="{Binding SubtypeId}"/>
                                 <controls:SortableGridViewColumn Header="Accessible" Width="80" DisplayMemberBinding="{Binding Accessible, Converter={StaticResource EnumToResouceConverter}}" />
